<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fajr"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/fajr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fajr_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/syuruq"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/syuruq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/syuruq_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dzuhur"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/dzuhur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dzuhur_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ashar"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/ashar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ashar_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maghrib"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/maghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maghrib_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isya"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/isya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/isya_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sepertiga"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/sepertiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sepertiga_time"
                android:textStyle="bold"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>